core/main/default/objects/CalloutTrackerExt__c/CalloutTrackerExt__c.object-meta.xml
<CustomObject>
    <description>Custom Object to store captured event</description>
    <label>Callout Tracker Ext</label>
    <nameField>
        <label>Callout Tracker Ext	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Callouts Tracker Ext</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>