core/main/default/objects/CalloutTrackerExt__c/fields/ElapsedTimeInMinutes__c.field-meta.xml
<CustomField>
    <fullName>ElapsedTimeInMinutes__c</fullName>
    <formula>(NOW() - CreatedDate) * 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elapsed Time In Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>