core/main/default/objects/CalloutTrackerExt__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Endpoint URL</description>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>