core/main/default/objects/CalloutTrackerExt__c/fields/HttpMethod__c.field-meta.xml
<CustomField>
    <fullName>HttpMethod__c</fullName>
    <description>GET, POST, PUT, PATCH, DELETE</description>
    <label>Http Method</label>
    <length>20</length>
    <type>Text</type>
</CustomField>