core/main/default/objects/CalloutTrackerExt__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Extra message from the request and response</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>