core/main/default/objects/CalloutTrackerExt__c/fields/OrgId__c.field-meta.xml
<CustomField>
    <fullName>OrgId__c</fullName>
    <formula>$Organization.Id</formula>
    <label>Org Id</label>
    <type>Text</type>
</CustomField>