core/main/default/objects/CalloutTrackerExt__c/fields/OrgName__c.field-meta.xml
<CustomField>
    <fullName>OrgName__c</fullName>
    <formula>$Organization.Name +&apos; &apos;+ LEFT($Api.Partner_Server_URL_530,FIND(&apos;/services&apos;,$Api.Partner_Server_URL_530))</formula>
    <label>Org Name</label>
    <type>Text</type>
</CustomField>