core/main/default/objects/CalloutTrackerExt__c/fields/QueryParameters__c.field-meta.xml
<CustomField>
    <fullName>QueryParameters__c</fullName>
    <description>Parameters used in Query URL</description>
    <label>Query Parameters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>