core/main/default/objects/CalloutTrackerExt__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>Http Request</description>
    <label>Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>