core/main/default/objects/CalloutTrackerExt__c/fields/ServiceId__c.field-meta.xml
<CustomField>
    <fullName>ServiceId__c</fullName>
    <description>Id of the service that was called</description>
    <label>Service Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>