core/main/default/objects/CalloutTrackerExt__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <description>Request Start Time</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>