core/main/default/objects/CalloutTrackerExt__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Http Request status</description>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>