core/main/default/objects/CalloutTrackerExt__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <description>Http Request Status Code</description>
    <label>Status Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>