core/main/default/objects/CalloutTrackerExt__c/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <description>Id to identify the transaction that has generated the event</description>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>