core/main/default/objects/CalloutTrackerExt__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>username of the user that has made the request</description>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>